[package]
name = "gitlab-tree"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.4"
base64 = "0.22"
crossterm = "0.27"
dirs = "6.0"
open = "5.3"
ratatui = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
